fixed spacing on mobile header.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -388,7 +388,8 @@ footer .copyright p {
   }
 
   .mobile-nav img {
-    padding-left: 2rem;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
   }
 
   header .logo ,
